Fix handling of nested double quotes.

From Ingo Schwarze <schwarze@usta.de> based on patch by enami@
in PR 48438.